# atlasctl

./: .gitignore  AGENTS.md  BUILDING.md  Cargo.toml  README.md  RELEASE.md  TESTING.md  atlas.toml  codecov.yml  justfile
.codex/goals/: active.toml
.codex/goals/archive/: ship-proof-topology-stack-v0-1.toml
.gemini/ralph/: state.json
.github/workflows/: coverage.yml  droid-review.yml  droid.yml
atlas/: artifacts.atlas.yaml  commands.atlas.yaml  core.atlas.yaml
crates/atlasctl-app/: Cargo.toml
crates/atlasctl-app/src/: lib.rs
crates/atlasctl-cli/: Cargo.toml
crates/atlasctl-cli/.atlas/: atlas.json  atlas.md
crates/atlasctl-cli/src/: main.rs
crates/atlasctl-cli/tests/: cli_integration.rs
crates/atlasctl-codes/: Cargo.toml
crates/atlasctl-codes/src/: lib.rs
crates/atlasctl-core/: Cargo.toml
crates/atlasctl-core/src/: lib.rs
crates/atlasctl-core/src/snapshots/: atlasctl_core__golden__golden__broken-link.json.snap  atlasctl_core__golden__golden__broken-link.md.snap  atlasctl_core__golden__golden__doctor-drift.json.snap  atlasctl_core__golden__golden__doctor-drift.md.snap  atlasctl_core__golden__golden__duplicate-id.json.snap  atlasctl_core__golden__golden__duplicate-id.md.snap  atlasctl_core__golden__golden__impact-packet.md.snap  atlasctl_core__golden__golden__impact-summary.md.snap  atlasctl_core__golden__golden__impact.json.snap  atlasctl_core__golden__golden__impact.md.snap  atlasctl_core__golden__golden__markdown-frontmatter.json.snap  atlasctl_core__golden__golden__markdown-frontmatter.md.snap  atlasctl_core__golden__golden__orphan-scenario.json.snap  atlasctl_core__golden__golden__orphan-scenario.md.snap  atlasctl_core__golden__golden__overlapping-participation.json.snap  atlasctl_core__golden__golden__overlapping-participation.md.snap  atlasctl_core__golden__golden__requirement-unproven.json.snap  atlasctl_core__golden__golden__requirement-unproven.md.snap  atlasctl_core__golden__golden__valid-minimal.json.snap  atlasctl_core__golden__golden__valid-minimal.md.snap  atlasctl_core__golden__golden__why.json.snap  atlasctl_core__golden__golden__why.md.snap
crates/atlasctl-discover-fs/: Cargo.toml
crates/atlasctl-discover-fs/src/: lib.rs
crates/atlasctl-fixtures/: Cargo.toml
crates/atlasctl-fixtures/src/: lib.rs
crates/atlasctl-ports/: Cargo.toml
crates/atlasctl-ports/src/: lib.rs
crates/atlasctl-render/: Cargo.toml
crates/atlasctl-render/src/: lib.rs
crates/atlasctl-types/: Cargo.toml
crates/atlasctl-types/src/: lib.rs
docs/: architecture.md  artifact-protocol.md  design.md  metadata-conventions.md  mission-and-vision.md  non-goals.md  requirements.md  tasks.md  testing-strategy.md
docs/adr/: 0001-product-scope-and-non-goals.md  0002-canonical-atlas-graph-and-ids.md  0003-discovery-conventions-and-fragments.md  0004-diagnostics-and-profile-semantics.md  0005-verification-matrix.md
docs/ci/: coverage.md
docs/handoffs/: agent-handoff-v0.1-proof-topology.md  atlasctl-real-repo-dogfood.md  v0.1-proof-topology-closeout.md
docs/specs/: 000-overview.md  010-graph-model.md  020-config.md  030-metadata-fragments.md  040-markdown-frontmatter.md  050-validation-profiles.md  060-artifact-protocol.md  070-review-impact.md  080-cli-contract.md  090-compatibility.md
docs/status/: SUPPORT_TIERS.md
fixtures/repos/broken-link/atlas/: example.atlas.yaml
fixtures/repos/doctor-drift/: atlas.toml
fixtures/repos/doctor-drift/atlas/: drift.atlas.yaml
fixtures/repos/duplicate-id/: atlas.toml
fixtures/repos/duplicate-id/atlas/: example.atlas.yaml
fixtures/repos/markdown-frontmatter/: atlas.toml
fixtures/repos/markdown-frontmatter/docs/: guide.md
fixtures/repos/orphan-scenario/atlas/: example.atlas.yaml
fixtures/repos/overlapping-participation/: atlas.toml
fixtures/repos/overlapping-participation/atlas/: example.atlas.yaml
fixtures/repos/requirement-unproven/: atlas.toml
fixtures/repos/requirement-unproven/atlas/: example.atlas.yaml
fixtures/repos/valid-minimal/: atlas.toml
fixtures/repos/valid-minimal/atlas/: example.atlas.yaml
fixtures/repos/why-glob/atlas/: example.atlas.yaml
fixtures/repos/why-glob/docs/adr/: 0001-example.md
policy/: docs-governance.toml  workflow-governance.toml
schemas/: atlas.schema.json  doctor.schema.json  impact.schema.json  why.schema.json
xtask/: Cargo.toml
xtask/src/: main.rs
