[workspace]
members = [
  "crates/atlasctl-codes",
  "crates/atlasctl-types",
  "crates/atlasctl-core",
  "crates/atlasctl-app",
  "crates/atlasctl-discover-fs",
  "crates/atlasctl-render",
  "crates/atlasctl-cli",
  "crates/atlasctl-fixtures",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["Steven Zimmerman"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
camino = { version = "1.1", features = ["serde1"] }
walkdir = "2.5"
globset = "0.4"
cargo_metadata = "0.18"
proptest = "1.6"
assert_cmd = "2.0"
predicates = "3.1"
insta = { version = "1.39", features = ["yaml", "json"] }
schemars = "0.8"
