[package]
name = "atlasctl-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
atlasctl-core = { path = "../atlasctl-core" }
atlasctl-ports = { path = "../atlasctl-ports" }
atlasctl-types = { path = "../atlasctl-types" }
camino.workspace = true
thiserror.workspace = true
