[package]
name = "atlasctl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
atlasctl-codes = { path = "../atlasctl-codes" }
atlasctl-types = { path = "../atlasctl-types" }
globset.workspace = true

[dev-dependencies]
atlasctl-discover-fs = { path = "../atlasctl-discover-fs" }
atlasctl-render = { path = "../atlasctl-render" }
atlasctl-fixtures = { path = "../atlasctl-fixtures" }
atlasctl-app = { path = "../atlasctl-app" }
camino.workspace = true
insta.workspace = true
proptest.workspace = true
serde_json.workspace = true
