[package]
name = "atlasctl-discover-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
atlasctl-ports = { path = "../atlasctl-ports" }
atlasctl-types = { path = "../atlasctl-types" }
camino.workspace = true
cargo_metadata.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
globset.workspace = true
