[package]
name = "atlasctl-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
atlasctl-codes = { path = "../atlasctl-codes" }
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
schemars.workspace = true
